--- a/uispec4j/src/site/html/example.html
+++ b/uispec4j/src/site/html/example.html
@@ -9,6 +9,7 @@
 <p>
   In this page, we use this simple application to explore three different UISpec4J usage
   strategies, or rather three maturity stages of a functional tests suite:
+</p>
 <ul>
   <li>
     <a href="#Stage 1: Fine-grained tests">Fine-grained tests</a>
@@ -26,7 +27,6 @@
     of the application, bound to the user interface with a custom engine based on UISpec4J.
   </li>
 </ul>
-</p>
 
 
 <h2>Stage 1: Fine-grained tests</h2>
@@ -145,4 +145,10 @@ private class Calculator {
 </p>
 
 
-
+<h2>Going further</h2>
+<p>Want to know more about UISpec4J?</p>
+<ul>
+  <li>Read the <a href="/tutorial">UISpec4J tutorial</a></li>
+  <li>Read the <a href="/getting-started">Getting Started</a> guide</li>
+  <li>Go to the <a href="/download">Downloads</a> page and start playing with it!</li>
+</ul>
