--- a/uispec4j/src/site/html/front_page.html
+++ b/uispec4j/src/site/html/front_page.html
@@ -43,6 +43,13 @@ public void testContacts() {
     renderers, resulting in several times as many lines of code.
   </p>
 
+  <h3>Exploring UISpec4J</h3>
+  <p>If you are new to UISpec4J, the best thing you can do is have a look at our
+  <a href="/tutorial">tutorial</a> and a simple <a href="/example">UISpec4J example</a>. Then you can follow
+  our <a href="/getting-started">getting started</a> guide to start using it on you own.</p>
+  <p>The <a href="/documentation">documentation overview</a> page lists all the how-to guides that
+  will help you come to speed with UISpecJ.</p>
+
   <h3>Current release</h3>
   <p>
     The current release is 1.5 (see <a href="changes-report.html">change log</a>).
@@ -51,9 +58,9 @@ public void testContacts() {
 
   <div class="columns">
     <div class="left-column">
-      <h3>Acknowledgements</h3><p>
-
-      <a href="http://www.jetbrains.com/idea/" class="externalLink" title="External Link">
+      <h3>Acknowledgements</h3>
+      <p>
+        <a href="http://www.jetbrains.com/idea/" class="externalLink" title="External Link">
         <img src="/files/images/logos/idea.gif" width="234" height="60" border="0" align="left"
              alt="Intellij/IDEA"/>
       </a>
@@ -61,15 +68,6 @@ public void testContacts() {
       <p>Thanks a lot to JetBrains for providing us with licences for
         their impressive IDE, IntelliJ/IDEA. We have been IntelliJ fans since 2002, and we still haven't
         found anything that comes close to this piece of software.
-      </p>
-      <a href="http://www.cenqua.com/clover/" class="externalLink" title="External Link">
-        <img src="/files/images/logos/clover_logo_small.gif" width="143" height="40" border="0" align="left"
-             alt="Clover"/>
-      </a>
-      <BR CLEAR=ALL>
-      <p>
-        Tansk also to Cenqua for providing us with licences for Clover,
-        an excellent code coverage analysis tool.
       </p>
     </div>
     <div class="right-column">
