Regis Medina Added ComponentMatchers.toolTipEquals(String) Regis Medina Added Table.foregroundNear(row, column, color) and Table.backgroundNear(row, column, color) for approximative comparisons. Marc Guiot     Update trace stack if trigger is called from swing thread
git-svn-id: https://svn.java.net/svn/uispec4j~svn/trunk@59 5be420d8-ef90-e5ee-9322-c1c25d4ab49f

--- a/uispec4j/src/site/html/gettingstarted.html
+++ b/uispec4j/src/site/html/gettingstarted.html
@@ -26,7 +26,7 @@ dialogs, or writing functional/acceptance tests for the whole application.
   UISpec4J runs in the same JVM as your application (or at least the client application if you
   are testing a distributed system). In order to run the tests, you will need to add uispec4j-xxx.jar
   to your classpath, along with its dependencies. You can download or find these JARs
-  from our <a href="download.html">downloads</a> page.
+  from our <a href="/download">downloads</a> page.
 </p>
 
 
@@ -34,7 +34,7 @@ dialogs, or writing functional/acceptance tests for the whole application.
 <p>
   In order for UISpec4J to be fully operational, you will need to call the
   <a href="/reports/apidocs/org/uispec4j/UISpec4J.html#init()">UISpec4J.init()</a> method before doing anything
-  with Swing (please refer to the <a href="/intercepting-windows">interception</a> documentation
+  with Swing (please refer to the <a href="interception.html">interception</a> documentation
   for further details).
 </p>
 <p>
@@ -55,7 +55,7 @@ public class MyOwnTest extends TestCase {
 </div>
 <p>
   Please note that having UISpec4J run on Linux may require some adjustements - please refer to our
-  <a href="/troubleshooting">troubleshouting</a> page for further details.
+  <a href="troubleshooting.html">troubleshouting</a> page for further details.
 </p>
 
 
