--- a/uispec4j/src/site/html/example.html
+++ b/uispec4j/src/site/html/example.html
@@ -1,10 +1,9 @@
-<h2>Overview</h2>
 <p>
   To illustrate UISpec4J's usage, let's consider a very simple application:
   a "calculator" utility looking like this:
 </p>
 <center>
-  <img src="/files/images/calculator.png" width="414" height="323"/>
+  <img src="files/images/calculator.png" width="414" height="323"/>
 </center>
 <p>
   In this page, we use this simple application to explore three different UISpec4J usage
@@ -12,30 +11,25 @@
 </p>
 <ul>
   <li>
-    <a href="#Stage 1: Fine-grained tests">Fine-grained tests</a>
-    reproducing interactions
+    <a href="#stage1">Fine-grained tests</a> reproducing interactions
     with the individual GUI components.
   </li>
   <li>
-    <a href="#Stage 2: Business scripts">Business scripts</a>
-    where higher-level APIs are
+    <a href="#stage2">Business scripts</a> where higher-level APIs are
     built on top of UISpec4J to produce a kind of domain-specific language.
   </li>
   <li>
-    <a href="#Stage 3: Data sheets">Data sheets</a>
-    representing the inputs and outputs
+    <a href="#stage3">Data sheets</a> representing the inputs and outputs
     of the application, bound to the user interface with a custom engine based on UISpec4J.
   </li>
 </ul>
 
-
-<h2>Stage 1: Fine-grained tests</h2>
+<h2><a name="stage1">Stage 1: Fine-grained tests</a></h2>
 <p>
   This is the direct approach: in a JUnit test, a fine-grained sequence of interactions is
   reproduced using the UISpec4J APIs:
 </p>
-<div class="code">
-<pre>
+<div class="source"><pre>
 public void testSimpleAddition() {
   Panel calculatorPanel = getMainWindow();
   calculatorPanel.getButton("2").click();
@@ -52,14 +46,12 @@ public void testSimpleAddition() {
   It is then time to consider switching to stage 2.
 </p>
 
-
-<h2>Stage 2: Business scripts</h2>
+<h2><a name="stage2">Stage 2: Business scripts</a></h2>
 <p>
   In this approach, the basic tests of stage 1 are progressively refactored, resulting in the
   emergence of testing utilities which make the tests themselves more compact:
 </p>
-<div class="code">
-<pre>
+<div class="source"><pre>
 public void testDisplay() {
   Calculator calc = new Calculator(this);
   calc.checkSequence("1", "1");
@@ -85,8 +77,7 @@ public void testSimpleAddition() {
 <p>
   Here is the corresponding Calculator implementation:
 </p>
-<div class="code">
-<pre>
+<div class="source"><pre>
 private class Calculator {
   private Window window;
 
@@ -115,14 +106,12 @@ private class Calculator {
   stage 3 comes into play.
 </p>
 
-
-<h2>Stage 3: Data sheets</h2>
+<h2><a name="stage3">Stage 3: Data sheets</a></h2>
 <p>
   At this stage, the test data may be produced by the customer team itself, using data files
   such as this one:
 </p>
-<div class="code">
-<pre>
+<div class="source"><pre>
 1+1=,2
 1,1
 123,123
@@ -130,25 +119,15 @@ private class Calculator {
 123+4,4
 123+456,456
 2+3=,5
-12+34=,46
+12+34=,46]]>
 </pre>
 </div>
 <p>
   UISpec4J is then used for writing a piece of code which reads the data from the file
-  and performs the corresponding actions on the GUI.
-  <br/>
+  and performs the corresponding actions on the GUI. <br/>
   Since you are writing the interpreting code, you can choose any file format: CSV, XML, etc.
   You can also use third party testing frameworks such as
-  <a href="http://www.fitnesse.org">Fitnesse</a>
-  to let the customer team
+  <a href="http://www.fitnesse.org">Fitnesse</a> to let the customer team
   write their own tests and run them in a Wiki.
 </p>
-
-
-<h2>Going further</h2>
-<p>Want to know more about UISpec4J?</p>
-<ul>
-  <li>Read the <a href="/tutorial">UISpec4J tutorial</a></li>
-  <li>Read the <a href="/getting-started">Getting Started</a> guide</li>
-  <li>Go to the <a href="/download">Downloads</a> page and start playing with it!</li>
-</ul>
+<p>For a more comprehensive overview of UISpec4J, please have a look at the <a href="/tutorial">UISpec4J tutorial</a></p>.
