--- a/uispec4j/src/main/java/org/uispec4j/assertion/package.html
+++ b/uispec4j/src/main/java/org/uispec4j/assertion/package.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 Provides a mechanism for checking conditions - please refer to the
-<a href="file://localhost/D:/Code/UISpec4J/target/docs/assertions.html">Using assertions</a>
+<a href="http://www.uispec4j.org/assertions">Using assertions</a>
 documentation page for details.
 </body>
 </html>
