--- a/uispec4j/src/main/java/org/uispec4j/interception/package.html
+++ b/uispec4j/src/main/java/org/uispec4j/interception/package.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 Provides a mechanism for intercepting popped-up dialogs and menus.
-The main class of this package is the <a href="WindowInterceptor.html">WindowInterceptor</a> class.
+The main class of this package is the <a href="/reports/apidocs/org/uispec4j/interception/WindowInterceptor.html">WindowInterceptor</a>
+class.
 </body>
 </html>
