Fixed broken links in documentation.hmtl and index.

--- a/legacy-doc/manual/index.html
+++ b/legacy-doc/manual/index.html
@@ -47,7 +47,7 @@ public void testContacts() {
   <p>If you are new to UISpec4J, the best thing you can do is have a look at our
   <a href="./tutorial.html">tutorial</a> and a simple <a href="./example.html">UISpec4J example</a>. Then you can follow
   our <a href="./gettingstarted.html">getting started</a> guide to start using it on you own.</p>
-  <p>The <a href="/documentation">documentation overview</a> page lists all the how-to guides that
+  <p>The <a href="./documentation.html">documentation overview</a> page lists all the how-to guides that
   will help you come to speed with UISpecJ.</p>
 
   <h3>Current release</h3>
